<?xml version="1.0"?>
<package format="2">
  <name>enable_cxx11_support</name>
  <version>0.1.0</version>
  <description>This packages enables c++11 support and forwards it to dependent packages</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>